[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/World/SubWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/World/GameRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/World/Floors/Medical.gd" type="Script" id=3]

[node name="Medical" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="MedRoom" parent="." index="0" instance=ExtResource( 2 )]

[node name="MedRoom2" parent="." index="1" instance=ExtResource( 2 )]
position = Vector2( -64, 0 )
roomSprite = 6

[node name="MedRoom3" parent="." index="2" instance=ExtResource( 2 )]
position = Vector2( 64, 0 )

[node name="MedRoom4" parent="." index="3" instance=ExtResource( 2 )]
position = Vector2( 0, -64 )
roomName = "Med lobby"
roomID = "med_lobbymain"
roomSprite = 1

[node name="MedRoom5" parent="." index="4" instance=ExtResource( 2 )]
position = Vector2( 64, -64 )
canEast = false

[node name="MedRoom6" parent="." index="5" instance=ExtResource( 2 )]
position = Vector2( -64, -64 )
roomID = "med_lobbyne"
canWest = false

[node name="MedRoom20" parent="." index="6" instance=ExtResource( 2 )]
self_modulate = Color( 0.7, 1, 0.7, 1 )
position = Vector2( -64, -128 )
canWest = false
roomColor = 1

[node name="MedRoom7" parent="." index="7" instance=ExtResource( 2 )]
position = Vector2( -128, -64 )
gridColor = 3

[node name="MedRoom8" parent="." index="8" instance=ExtResource( 2 )]
position = Vector2( 128, -64 )
gridColor = 3

[node name="MedRoom9" parent="." index="9" instance=ExtResource( 2 )]
position = Vector2( 128, -128 )

[node name="MedRoom10" parent="." index="10" instance=ExtResource( 2 )]
position = Vector2( 128, -192 )

[node name="MedRoom11" parent="." index="11" instance=ExtResource( 2 )]
position = Vector2( 128, -256 )
gridColor = 2

[node name="MedRoom12" parent="." index="12" instance=ExtResource( 2 )]
position = Vector2( 128, -320 )
gridColor = 2

[node name="MedRoom13" parent="." index="13" instance=ExtResource( 2 )]
position = Vector2( 64, -320 )
gridColor = 2

[node name="MedRoom14" parent="." index="14" instance=ExtResource( 2 )]
position = Vector2( 0, -320 )
gridColor = 2

[node name="MedRoom15" parent="." index="15" instance=ExtResource( 2 )]
position = Vector2( -64, -320 )
gridColor = 2

[node name="MedRoom16" parent="." index="16" instance=ExtResource( 2 )]
position = Vector2( -128, -320 )
gridColor = 2

[node name="MedRoom17" parent="." index="17" instance=ExtResource( 2 )]
position = Vector2( -128, -256 )
gridColor = 2

[node name="MedRoom18" parent="." index="18" instance=ExtResource( 2 )]
position = Vector2( -128, -192 )
roomID = "med_nearmilking"

[node name="MedRoom19" parent="." index="19" instance=ExtResource( 2 )]
position = Vector2( -128, -128 )
roomID = "med_nearlab"

[node name="MedLab" parent="." index="20" instance=ExtResource( 2 )]
self_modulate = Color( 0.7, 0.7, 1, 1 )
position = Vector2( -192, -128 )
roomName = "Research Lab"
roomID = "med_researchlab"
roomColor = 3

[node name="MedMilkingRoom" parent="." index="21" instance=ExtResource( 2 )]
self_modulate = Color( 0.7, 0.7, 1, 1 )
position = Vector2( -64, -192 )
roomName = "Milking room"
roomID = "med_milkingroom"
canSouth = false
roomColor = 3

[node name="MedElevator" parent="." index="22" instance=ExtResource( 2 )]
self_modulate = Color( 1, 0.6, 0.6, 1 )
position = Vector2( 0, 64 )
roomName = "Elevator"
roomID = "med_elevator"
roomSprite = 3
roomColor = 2

[connection signal="onEnter" from="MedRoom2" to="." method="_on_MedRoom2_onEnter"]
[connection signal="onReact" from="MedRoom2" to="." method="_on_MedRoom2_onReact"]
[connection signal="onEnter" from="MedRoom7" to="." method="_on_MedRoom7_onEnter"]
[connection signal="onReact" from="MedRoom7" to="." method="_on_MedRoom7_onReact"]
[connection signal="onEnter" from="MedElevator" to="." method="_on_MedElevator_onEnter"]
[connection signal="onReact" from="MedElevator" to="." method="_on_MedElevator_onReact"]
